superbitty/tests/ui/bitfields/too_big_size.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/too_big_size.rs:21:1
   |
21 | / bitfields! {
22 | |     struct TooBigSize : u8 {
23 | |         a: One,
24 | |         b: Two,
...  |
29 | |     }
30 | | }
   | |_^ the evaluated program panicked at 'bitfield size is too big - choose another base type', $DIR/tests/ui/bitfields/too_big_size.rs:21:1
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)
